@@ -22,6 +22,9 @@ apt (0.9.7.6) UNRELEASED; urgency=low
   * apt-pkg/edsp.cc:
     - include reinstall requests and already installed (= protected) packages
       in the install-request for external resolvers (Closes: #689331)
+  * apt-pkg/policy.cc:
+    - match pins with(out) an architecture as we do on the commandline
+      (partly fixing #687255, b= support has to wait for jessie)
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 19 Sep 2012 11:29:56 +0200
 
